--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                                                                                                                                                            
+                                                                                                                                                                                    
     
     
     
@@ -41,8 +41,12 @@
     
     
     
-    <wb-module deploy-name="Acme-One-23.1-23.1">
-                                                                                                                                                                                                                                                                                                                                                        
+    
+    
+    <wb-module deploy-name="Acme-L3-D01-23.1.3">
+                                                                                                                                                                                                                                                                                                                                                                        
+        
+        
         
         
         
@@ -85,7 +89,9 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                                                                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                                                                                                                                                
+        
+        
         
         
         
@@ -127,7 +133,9 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                                                                                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                                                                                                                                                
+        
+        
         
         
         
@@ -169,7 +177,9 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                                                                                                                                                                                                                                                                        
+                                                                                                                                                                                                                                                                                                                                                        
+        
+        
         
         
         
@@ -210,7 +220,9 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
-                                                                                                                                                                                                                                        
+                                                                                                                                                                                                                                                        
+        
+        
         
         
         
@@ -239,11 +251,15 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                                
+                                                
+        
+        
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework"/>
-                                                                                                                                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                                                                                                                                                
+        
+        
         
         
         
@@ -285,8 +301,10 @@
         
         
         <property name="java-output-path" value="/Hello-World-22.0/target/classes"/>
-        <property name="context-root" value="Acme-One-23.1"/>
-                                                                                                                                                                                                                                                                                                                                                    
+        <property name="context-root" value="Acme-L3"/>
+                                                                                                                                                                                                                                                                                                                                                                    
+    
+    
     
     
     
@@ -329,7 +347,9 @@
     
     
     </wb-module>
-                                                                                                                                                                        
+                                                                                                                                                                                
+
+
 
 
 
